bk_ida/gccida/c2/init_propagate_block_info
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_propagate_block_info/src/flow.c:2272:4: error: expected ';' after expression
rtx v20; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_propagate_block_info/src/flow.c:2272:5: error: use of undeclared identifier 'v20'; did you mean 'v10'?
rtx v20; // r13 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_propagate_block_info/src/flow.c:2262:31: note: 'v10' declared here
 struct propagate_block_info *v10; // r15 
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_propagate_block_info/src/flow.c:2291:28: error: expected expression
v10->reg_next_use = ( rtx *)xcalloc( v11, 8uLL); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_propagate_block_info/src/flow.c:2317:13: error: expected ';' after expression
v18 = ( rtx)end[2]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_propagate_block_info/src/flow.c:2319:34: error: expected expression
v18 = single_set_2( end, *( rtx *)&end[2]); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_propagate_block_info/src/flow.c:2325:1: error: use of undeclared identifier 'v20'
v20 = canon_rtx( rtx); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_propagate_block_info/src/flow.c:2326:20: error: use of undeclared identifier 'v20'
if ( ( *( _DWORD *)v20 & 0x4000000) != 0 ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_propagate_block_info/src/flow.c:2328:24: error: use of undeclared identifier 'v20'
v21.rtwint = ( __int64)v20->fld[0]; 
                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_propagate_block_info/src/flow.c:2331:12: error: expected expression
|| *( rtx *)( v21.rtwint + 8) != global_rtl[3] 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_propagate_block_info/src/flow.c:2336:20: error: use of undeclared identifier 'v20'
if ( ( *( _DWORD *)v20 & 0xFF0000) == 3342336 ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_propagate_block_info/src/flow.c:2341:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v22.rtwint = ( __int64)v17->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_propagate_block_info/src/flow.c:2342:36: error: expected expression
if ( rtx_equal_p( v21.rtx, *( rtx *)( v22.rtwint + 8)) ) 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_propagate_block_info/src/flow.c:2346:39: error: use of undeclared identifier 'v20'
if ( mode_size[*( ( unsigned __int8 *)v20 + 2)] > mode_size[*( unsigned __int8 *)( v22.rtwint + 2)] ) 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_propagate_block_info/src/flow.c:2347:25: error: use of undeclared identifier 'v20'
fld->rtwint = ( __int64)v20; 
                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_propagate_block_info/src/flow.c:2352:13: error: expected ';' after expression
v17 = ( rtx)v17[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_propagate_block_info/src/flow.c:2355:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v22.rtwint = ( __int64)v17->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_propagate_block_info/src/flow.c:2356:44: error: expected expression
if ( rtx_equal_p( v20->fld[0].rtx, *( rtx *)( v22.rtwint + 8)) ) 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_propagate_block_info/src/flow.c:2356:19: error: use of undeclared identifier 'v20'
if ( rtx_equal_p( v20->fld[0].rtx, *( rtx *)( v22.rtwint + 8)) ) 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_propagate_block_info/src/flow.c:2366:27: error: use of undeclared identifier 'v20'; did you mean 'v10'?
v17 = alloc_EXPR_LIST( 0, v20, next); 
                          ^~~
                          v10
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_propagate_block_info/src/flow.c:2262:31: note: 'v10' declared here
 struct propagate_block_info *v10; // r15 
                              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_propagate_block_info/src/obj/flow.o] Error 1
